test/Fail/TacticFail.err
TacticFail.agda:22.7-14: error: [GenericDocError]
Surprisingly the failTactic failed to prove (z : P ≡ NP) → ⊥
when checking that the expression unquote proveIt has type
P ≡ NP → ⊥
